--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,600,700|Rubik:400,600,700");
+* {
+  scroll-behavior: smooth;
+}
 body {
   font-size: 16px;
   font-weight: 400;
